--- a/Sprint123/WebUI/Views/Reservation/EmailReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/EmailReservation.cshtml
@@ -12,7 +12,7 @@
         <p>Voer je email adres in om de reservering te bevestigen!</p>
         <p>@Html.TextBoxFor(x => Model.EmailAdress, new { @class = "formcontrol" })</p>
         <p>Ik wil graag de nieuwsbrief ontvangen!   @Html.CheckBoxFor(x => Model.NewsLetter)</p>
-        <input class="btn btn-success" type="submit" value="Reserveer" />
+        <input class="btn btn-danger" type="submit" value="Reserveer" />
     }
 </body>
 
