--- a/Sprint123/WebUI/Views/Reservation/NoReservationFound.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/NoReservationFound.cshtml
@@ -7,7 +7,7 @@
     <p>
         <h2>We hebben geen reservering met deze code kunnen vinden.</h2>
         <td>
-            <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("Reservation", "Reservation")'">Terug</button>
+            <button class="btn btn-danger" type="button" onclick="location.href = '@Url.Action("Reservation", "Reservation")'">Terug</button>
         </td>
     </p>
 </body>
