--- a/Sprint123/WebUI/Views/Reservation/Success.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/Success.cshtml
@@ -12,7 +12,7 @@
         <b>In je mailbox heb je deze code ook ontvangen.</b><br /><br />
         @if (Model.Paid == true)
     {
-        <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("PrintSessionTickets","Reservation", new { reservationID = Model.reservationID })';disableButton(this)">Print Tickets</button>
+        <button type="button" id="oneclick" class="btn btn-danger" onclick="location.href='@Url.Action("PrintSessionTickets","Reservation", new { reservationID = Model.reservationID })';disableButton(this)">Print Tickets</button>
 }
     </div>
 </body>
