--- a/Sprint123/WebUI/Views/Ticket/AddPopcorn.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/AddPopcorn.cshtml
@@ -53,7 +53,7 @@
             }
 
         </table> <br />
-        <input class="btn btn-success" type="submit" value="Voeg toe!" />
+        <input class="btn btn-danger" type="submit" value="Voeg toe!" />
         }
     </div>
 </body>
