--- a/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
@@ -45,7 +45,7 @@
         </table>
 
 
-        <input class="btn btn-success" type="submit" value="Bestellen" />
+        <input class="btn btn-danger" type="submit" value="Bestellen" />
 }
     </div>
 </body>
