--- a/Sprint123/WebUI/Views/UpcomingShow/NotAvailable.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/NotAvailable.cshtml
@@ -30,7 +30,7 @@
     <nav class="nav-avans" , style="height: 60px;">
         <div class="container" }>
             <a class="navbar-brand" href="/UpcomingShow/Overview?locationid=1" style="color:black; padding: 10px; font-weight: bold;">Avans Cinema</a>
-            <input action="action" class="btn btn-success" style="float: right; padding:8px; margin-top:8px" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
+            <input action="action" class="btn btn-danger" style="float: right; padding:8px; margin-top:8px" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
             <ul class="global-links">
                 <li>
 
