--- a/Sprint123/WebUI/Views/UpcomingShow/ShowDetails.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/ShowDetails.cshtml
@@ -89,7 +89,7 @@
                     </dd>
                 </dl>
                 <p>
-                <button class="btn btn-success" type="button" onclick="location.href = '@Url.Action("OrderMovie", "UpcomingShow", new { id = Model.ShowID, secret = false}, null)'">Bestel kaartjes</button>
+                <button class="btn btn-danger" type="button" onclick="location.href = '@Url.Action("OrderMovie", "UpcomingShow", new { id = Model.ShowID, secret = false}, null)'">Bestel kaartjes</button>
             </p>
             </div>
             <div class="col-sm">
