--- a/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/DisplayReservation.cshtml
@@ -66,8 +66,8 @@
             </tr>
     }
         </table>
-        <button class="btn btn-success" type="button" id="oneclick" onclick="location.href = '@Url.Action("PrintReservationTickets", "Reservation", new { reservationID = Model.FirstOrDefault().ReservationID })';disableButton(this)">Print je tickets!</button>
-        <!--<input action="action" class="btn btn-success" type="button" value="Start nieuwe bestelling" onclick="window.history.go(-2); return false;" />-->
+        <button class="btn btn-danger" type="button" id="oneclick" onclick="location.href = '@Url.Action("PrintReservationTickets", "Reservation", new { reservationID = Model.FirstOrDefault().ReservationID })';disableButton(this)">Print je tickets!</button>
+        <!--<input action="action" class="btn btn-danger" type="button" value="Start nieuwe bestelling" onclick="window.history.go(-2); return false;" />-->
         </div>
     </body>
 
