--- a/Sprint123/WebUI/Views/Reservation/DisplayTempReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/DisplayTempReservation.cshtml
@@ -66,8 +66,8 @@ else
             </tr>
     }
         </table>
-        <button class="btn btn-success" type="button" id="oneclick" onclick="location.href = '@Url.Action("Pay", "Pin", new { reservationID = Model.FirstOrDefault().ReservationID })'">Naar betalen</button>
-        <button class="btn btn-success" type="button" id="oneclick" onclick="location.href = '@Url.Action("EmailReservation", "Reservation", new { reservationID = Model.FirstOrDefault().ReservationID , Paid = false})'">Alleen reserveren</button>
+        <button class="btn btn-danger" type="button" id="oneclick" onclick="location.href = '@Url.Action("Pay", "Pin", new { reservationID = Model.FirstOrDefault().ReservationID })'">Naar betalen</button>
+        <button class="btn btn-danger" type="button" id="oneclick" onclick="location.href = '@Url.Action("EmailReservation", "Reservation", new { reservationID = Model.FirstOrDefault().ReservationID , Paid = false})'">Alleen reserveren</button>
     </div>
 </body>
 
