--- a/Sprint123/WebUI/Views/Reservation/Reservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/Reservation.cshtml
@@ -12,7 +12,7 @@
          {
         <p>Voer het ID van je reservering in</p>
         <input type="number" name="reservationID" min="0" max="99999999999999" required />
-        <input class="btn btn-success" type="submit" value="Ophalen" />
+        <input class="btn btn-danger" type="submit" value="Ophalen" />
          }
     </div>
 </body>
