--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -49,9 +49,9 @@
             @Html.ActionLink("Avans Cinema", "Overview", "UpcomingShow", new { locationid = 1 }, new { @style = "color:black; padding: 10px; font-weight: bold;", @class = "navbar-brand" })
             @if (ViewContext.HttpContext.Request.AppRelativeCurrentExecutionFilePath != "~/UpcomingShow/Overview" & ViewContext.HttpContext.Request.AppRelativeCurrentExecutionFilePath != "~/Home/Index")
             {
-                 <input action="action" class="btn btn-dark" style="float: right; padding:8px; margin-top:8px" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
+                 <input action="action" class="btn btn-outline-light" style="float: right; padding:8px; margin-top:8px" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
             }
-            <button class="btn btn-dark" type="button" style="float: right; padding:8px; margin-top:8px; margin-right:16px" onclick="location.href = '@Url.Action("Specials", "Specials")'">Arrangementen</button>
+            <button class="btn btn-outline-light" type="button" style="float: right; padding:8px; margin-top:8px; margin-right:16px" onclick="location.href = '@Url.Action("Specials", "Specials")'">Arrangementen</button>
             <ul class="global-links">
                 <li>
                     
@@ -71,7 +71,7 @@
     <footer class="card-footer" style="height:110px">
         <div class="container">
             <p style="color:aliceblue">&copy; @DateTime.Now.Year - IVH15</p><a href="/"><img src="~/Content/footer-logo90x30.png" alt="Avans Hogeschool" class="footerlogo" /></a>
-            <button class="btn btn-link" type="button" style="padding-left:50px" onclick="location.href = '@Url.Action("Unsubscribe", "Email")'">Afmelden nieuwsbrief</button>
+            <button class="btn btn-outline-danger" type="button" style="margin-left:50px" onclick="location.href = '@Url.Action("Unsubscribe", "Email")'">Afmelden nieuwsbrief</button>
             <a href="https://www.facebook.com/Avansinformatica/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_facebook.png" /></a>
             <a href="https://twitter.com/avanshogeschool" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_twitter.png" /></a>
             <a href="https://www.instagram.com/avanshogeschool/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_insta.png" /></a>
