--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
             {
                  <input action="action" class="btn btn-outline-light" style="float: right; padding:8px; margin-top:8px" type="button" value="Terug naar vorige scherm" onclick="window.history.go(-1); return false;" />
             }
-            <button class="btn btn-outline-light" type="button" style="float: right; padding:8px; margin-top:8px; margin-right:16px" onclick="location.href = '@Url.Action("Specials", "Specials")'">Arrangementen</button>
+            <button class="btn btn-outline-light" type="button" style="float: right; padding:8px; margin-top:8px; margin-right:16px" onclick="location.href = '@Url.Action("Specials", "Specials")'">Arrangementen en Specials</button>
             <ul class="global-links">
                 <li>
                     
