--- a/Sprint123/WebUI/Views/Home/Index.cshtml
+++ b/Sprint123/WebUI/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         </p>
         <p>            
             <button class="btn btn-danger" type="button" onclick="location.href = '@Url.Action("Overview", "UpcomingShow", new {locationid = 1}, null)'">Bioscoop Breda</button>
-            <button class="btn btn-danger" type="button" onclick="location.href = '@Url.Action("Overview", "UpcomingShow", new {locationid = 2}, null)'">bioscoop Eindhoven</button>
+            <button class="btn btn-danger" type="button" onclick="location.href = '@Url.Action("Overview", "UpcomingShow", new {locationid = 2}, null)'">Bioscoop Eindhoven</button>
             <button class="btn btn-danger" type="button" onclick="location.href = '@Url.Action("Overview", "UpcomingShow", new {locationid = 3}, null)'">Bioscoop Tilburg</button>
         </p>        
     </div>
