--- a/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="text-center">
     <br />
-    <button class="btn btn-danger" type="button" onclick="location.href = '@Url.Action("Reservation", "Reservation")'">Haal hier u Reservering op</button> <h2>Verwachte films:</h2>
+    <button class="btn btn-danger" type="button" onclick="location.href = '@Url.Action("Reservation", "Reservation")'">Haal hier uw reservering op</button> <h2>Verwachte films:</h2>
 </div>
 <div class="align-content-center" style="color: brown">
     <div id="verwachtefilms" class="carousel slide" data-ride="carousel">
