--- a/Sprint123/WebUI/Views/Pin/Creditcard.cshtml
+++ b/Sprint123/WebUI/Views/Pin/Creditcard.cshtml
@@ -25,7 +25,7 @@
             @Html.ValidationMessageFor(m => m.CVC)
         </div>
         @*<button type="submit">Bevestig</button>*@
-        <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("Finish", "Pin", new { reservationID = Model.reservationID })';disableButton(this)">Betaal &amp; Print Tickets</button>
+        <button type="button" id="oneclick" class="btn btn-dangers" onclick="location.href='@Url.Action("Finish", "Pin", new { reservationID = Model.reservationID })';disableButton(this)">Betaal &amp; Print Tickets</button>
     </div>
 </div>
  }
