--- a/Sprint123/WebUI/Views/Email/Unsubscribe.cshtml
+++ b/Sprint123/WebUI/Views/Email/Unsubscribe.cshtml
@@ -15,7 +15,7 @@
             @Html.TextBoxFor(x => Model.EmailAdress, new { @class = "formcontrol" }) 
         </div>
         <br />
-        <input class="btn btn-lg" type="submit" value="Afmelden!" />
+        <input class="btn btn-danger" type="submit" value="Afmelden!" />
         }
     </body>
 
