--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -107,9 +107,9 @@
         <div class="container">
             <p style="color:aliceblue">&copy; @DateTime.Now.Year - IVH15</p><a href="/"><img src="~/Content/footer-logo90x30.png" alt="Avans Hogeschool" class="footerlogo" /></a>
             <button class="btn btn-outline-danger" type="button" style="margin-left:50px" onclick="location.href = '@Url.Action("Unsubscribe", "Email")'">Afmelden nieuwsbrief</button>
-            <a href="https://www.facebook.com/Avansinformatica/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_facebook.png" /></a>
-            <a href="https://twitter.com/avanshogeschool" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_twitter.png" /></a>
-            <a href="https://www.instagram.com/avanshogeschool/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_insta.png" /></a>
+            <a target="_blank" href="https://www.facebook.com/Avansinformatica/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_facebook.png" /></a>
+            <a target="_blank"href="https://twitter.com/avanshogeschool" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_twitter.png" /></a>
+            <a target="_blank" href="https://www.instagram.com/avanshogeschool/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_insta.png" /></a>
         </div>
     </footer>
     <!-- End Footer Avans-->
