--- a/Sprint123/WebUI/Views/Contact/Contact.cshtml
+++ b/Sprint123/WebUI/Views/Contact/Contact.cshtml
@@ -9,9 +9,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <br>
-                    <button type="button" class="btn btn-success" onclick="location.href='@Url.Action("FindLocation", "Contact", new { Name = "Breda"})'">Breda</button> 
-                    <button type="button" class="btn btn-success" onclick="location.href='@Url.Action("FindLocation", "Contact", new { Name = "Eindhoven"})'">Eindhoven</button> 
-                    <button type="button" class="btn btn-success" onclick="location.href='@Url.Action("FindLocation", "Contact", new { Name = "Tilburg"})'">Tilburg</button>
+                    <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("FindLocation", "Contact", new { Name = "Breda"})'">Breda</button> 
+                    <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("FindLocation", "Contact", new { Name = "Eindhoven"})'">Eindhoven</button> 
+                    <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("FindLocation", "Contact", new { Name = "Tilburg"})'">Tilburg</button>
                     <br>
                     @if (ViewBag.Name != null)
                      {
