--- a/Sprint123/WebUI/Views/Pin/Creditcard.cshtml
+++ b/Sprint123/WebUI/Views/Pin/Creditcard.cshtml
@@ -1,31 +1,26 @@
 ﻿@model WebUI.Models.CreditcardModel
+
 @{
     ViewBag.Title = "Creditcard";
 }
-
-<h2>Creditcard betaling</h2>
-@using (Html.BeginForm(@*"ValidateCredit", "Pin", FormMethod.Post, new { reservationID = Model.reservationID }*@))
+<br />
+<img src="~/Content/visa.png" alt="Visa" style="width:80px; height:100px;" /><img src="~/Content/mastercard.png" alt="Mastercard" style="width:80px; height:90px;" />
+<h2><b>Creditcard betaling</b></h2>
+<br />
+@using (Html.BeginForm("FinishCredit", "Pin", new { reservationID = Model.reservationID, paytype = "credit" }))
  {
-@Html.AntiForgeryToken()
 <div class="form-horizontal">
-    <div class="container">
-        @Html.ValidationSummary(true)
-        <div class="form-group">
-            <label>Creditcardnummer: </label>
-            @Html.EditorFor(m => m.Creditcard)
-            @Html.ValidationMessageFor(m => m.Creditcard)
-            <label>Maand: </label>
-            @Html.EnumDropDownListFor(m => m.Month, Model.Month)
-            @Html.ValidationMessageFor(m => m.Month)
-            <label>Jaar: </label>
-            @Html.EditorFor(m => m.Year, Model.Year)
-            @Html.ValidationMessageFor(m => m.Year)
-            <label>CVC: </label>
-            @Html.EditorFor(m => m.CVC)
-            @Html.ValidationMessageFor(m => m.CVC)
-        </div>
-        @*<button type="submit">Bevestig</button>*@
-        <button type="button" id="oneclick" class="btn btn-success" onclick="location.href='@Url.Action("Finish", "Pin", new { reservationID = Model.reservationID })';disableButton(this)">Betaal &amp; Print Tickets</button>
+ <div class="form-group">
+        <label>Creditcardnummer: </label>
+        @Html.EditorFor(m => m.Creditcard)
+        <p>@Model.Crediterror</p>
+        <label>Verloopdatum: </label>
+        @Html.EditorFor(m => m.ExpireDate, Model.ExpireDate)
+        <p>@Model.Expireerror</p>
+        <label>CVC: </label>
+        @Html.EditorFor(m => m.CVC)
+        <p>@Model.CVCerror</p>
     </div>
-</div>
+    <button type="submit" class="btn btn-danger">Bevestig</button>
+ </div>
  }
