--- a/Sprint123/WebUI/Views/Pin/Pay.cshtml
+++ b/Sprint123/WebUI/Views/Pin/Pay.cshtml
@@ -61,7 +61,7 @@
                 </div>
                 <!--pin numpad END-->
                 @*<input type="submit" value="Betaal" class="btn btn-danger" onclick="location.href='@Url.Action("PrintTickets","Reservation", Model)'">*@
-                <button type="button" id="oneclick" class="btn btn-danger" onclick="location.href='@Url.Action("Finish","Pin", new { reservationID = Model.reservationID })';disableButton(this)">Betaal &amp; Print Tickets</button>
+                <button type="button" id="oneclick" class="btn btn-danger" onclick="location.href='@Url.Action("FinishPin","Pin", new { reservationID = Model.reservationID })';disableButton(this)">Betaal &amp; Print Tickets</button>
                 <!--<input action="action" class="btn btn-danger" type="button" value="Start nieuwe bestelling" onclick="window.history.go(-4); return false;" />-->
             </div>
         </div>
