caroussel goes to new tab, trailer can be fullscreen in detailpage.

--- a/Sprint123/WebUI/Views/UpcomingShow/ShowDetails.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/ShowDetails.cshtml
@@ -93,7 +93,7 @@
             </p>
             </div>
             <div class="col-sm">
-                <iframe width="400" height="300" src="@Model.Movie.Trailer"></iframe>
+                <iframe width="400" height="300" src="@Model.Movie.Trailer" allowfullscreen></iframe>
                 <dl>
                     <dt>
                         Beschrijving
