--- a/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
@@ -20,21 +20,21 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         @if (ViewBag.trailer1 != null && ViewBag.image1 != null) {
-                        <a href="@Html.Raw(ViewBag.trailer1)"><img class="d-block w-10" src="data:image;base64,@System.Convert.ToBase64String(ViewBag.image1)" alt="First slide"></a>
+                        <a target="_blank" href="@Html.Raw(ViewBag.trailer1)"><img class="d-block w-10" src="data:image;base64,@System.Convert.ToBase64String(ViewBag.image1)" alt="First slide"></a>
                          }
                         <div class="carousel-caption d-none d-md-block">
                         </div>
                     </div>
                     <div class="carousel-item">
                         @if (ViewBag.trailer2 != null && ViewBag.image2 != null) {
-                        <a href="@Html.Raw(ViewBag.trailer2)"><img class="d-block w-10" src="data:image;base64,@System.Convert.ToBase64String(ViewBag.image2)" alt="Second slide"></a>
+                        <a target="_blank" href="@Html.Raw(ViewBag.trailer2)"><img class="d-block w-10" src="data:image;base64,@System.Convert.ToBase64String(ViewBag.image2)" alt="Second slide"></a>
                          }
                         <div class="carousel-caption d-none d-md-block">                             
                         </div>
                     </div>
                     <div class="carousel-item">
                         @if (ViewBag.trailer3 != null && ViewBag.image3 != null) {
-                        <a href="@Html.Raw(ViewBag.trailer3)"><img class="d-block w-10" src="data:image;base64,@System.Convert.ToBase64String(ViewBag.image3)" alt="Third slide"></a>
+                        <a target="_blank" href="@Html.Raw(ViewBag.trailer3)"><img class="d-block w-10" src="data:image;base64,@System.Convert.ToBase64String(ViewBag.image3)" alt="Third slide"></a>
                          }
                         <div class="carousel-caption d-none d-md-block">
                         </div>
