added kids arrangement

--- a/Sprint123/WebUI/Views/Specials/KidsOrder.cshtml
+++ b/Sprint123/WebUI/Views/Specials/KidsOrder.cshtml
@@ -1,15 +1,15 @@
 ﻿@model WebUI.Models.Order
 @{
-    ViewBag.Title = "Ladies Night bestellen";
+    ViewBag.Title = "Kinderfeestje bestellen";
 }
 
 <body>
     <div class="text-center">
         @*<p>*@
         <br />
-        <h2>Je bestelt nu tickets voor @ViewBag.MovieName tijdens de Ladies Night!</h2><br />
+        <h2>Je bestelt nu tickets voor @ViewBag.MovieName voor het kinderfeestje arrangement!</h2><br />
         <p>Selecteer het aantal gewenste tickets.</p>
-        <b>Let op:</b><p>Bestel minimaal 1 en maximaal 10 tickets!</p>
+        <b>Let op:</b><p>Bestel minimaal 1 en maximaal 20 tickets!</p>
         <p style="color:red"><b>@ViewBag.SoldOut</b></p>
         @*</p>*@
         @using (Html.BeginForm())
@@ -22,9 +22,9 @@
                     <th scope="col">Aantal</th>
                 </tr>
                 <tr>
-                    <td>Ladies</td>
-                    <td>€15,45</td>
-                    <td>@Html.TextBox("ladiesTickets", 0, new { @type = "number", @min = "0", @max = "10", @style = "width:50px" })</td>
+                    <td>Kinderen</td>
+                    <td>€14,45</td>
+                    <td>@Html.TextBox("KidsTickets", 0, new { @type = "number", @min = "0", @max = "20", @style = "width:50px" })</td>
                 </tr>
             </table>
             <input class="btn btn-danger" type="submit" value="Bestellen" />
