--- a/Sprint123/WebUI/Views/Specials/Ladies.cshtml
+++ b/Sprint123/WebUI/Views/Specials/Ladies.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Domain.Entities.Show
 
 @{
-    ViewBag.Title = "Ladies";
+    ViewBag.Title = "Ladies Night: " + Model.Movie.Name;
 }
 
 <body>
