changed naming convention in a model, added some spacing to views, fixed bug where ticketlist wasn't emptied on going to previous page

--- a/Sprint123/WebUI/Views/Ticket/AddPopcorn.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/AddPopcorn.cshtml
@@ -18,10 +18,10 @@
                 <th scope="col">Ticket Nummer</th>
                 <th scope="col">Prijs</th>
                 <th scope="col">Type</th>
-                <th scope="col">Popcorn?</th>
-                <th scope="col">Extra kosten</th>
-                <th scope="col">3D Bril?</th>
-                <th scope="col">Extra kosten</th>
+                <th scope="col">Met popcorn</th>
+                <th scope="col">Prijs</th>
+                <th scope="col">Met 3D bril</th>
+                <th scope="col">Prijs</th>
             </tr>
             @{ int j = 0;}
             @for (int i = 0; i < Model.Count; i++)
