--- a/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/OrderTickets.cshtml
@@ -15,7 +15,7 @@
         @*</p>*@
         @using (Html.BeginForm())
         {
-        <p style="display:none">Reservering ID: @Html.DisplayFor(x => Model.reservationID) Show ID: @Html.DisplayFor(x => Model.showID) </p>
+        <p style="display:none">Reservering ID: @Html.DisplayFor(x => Model.ReservationID) Show ID: @Html.DisplayFor(x => Model.ShowID) </p>
         <table align="center" style="border-spacing: 10px; border-collapse: separate;">
             <tr>
                 <th scope="col">Type ticket</th>
@@ -25,22 +25,22 @@
             <tr>
                 <td>Standaard</td>
                 <td>€@ViewBag.NormalPrice</td>
-                <td>@Html.TextBox("normalTickets", 0, new { @type = "number", @min = "0", @max = "10", @style = "width:50px" })</td>
+                <td>@Html.TextBox("NormalTickets", 0, new { @type = "number", @min = "0", @max = "10", @style = "width:50px" })</td>
             </tr>
             <tr>
                 <td>Kind</td>
                 <td>€@ViewBag.ChildPrice</td>
-                <td>@Html.TextBox("childTickets", 0, new { @type = "number", @min = "0", @max = "10", @style = "width:50px" })</td>
+                <td>@Html.TextBox("ChildTickets", 0, new { @type = "number", @min = "0", @max = "10", @style = "width:50px" })</td>
             </tr>
             <tr>
                 <td>Student</td>
                 <td>€@ViewBag.StudentPrice</td>
-                <td>@Html.TextBox("studentTickets", 0, new { @type = "number", @min = "0", @max = "10", @style = "width:50px" })</td>
+                <td>@Html.TextBox("StudentTickets", 0, new { @type = "number", @min = "0", @max = "10", @style = "width:50px" })</td>
             </tr>
             <tr>
                 <td>Senior</td>
                 <td>€@ViewBag.SeniorPrice</td>
-                <td>@Html.TextBox("seniorTickets", 0, new { @type = "number", @min = "0", @max = "10", @style = "width:50px" })</td>
+                <td>@Html.TextBox("SeniorTickets", 0, new { @type = "number", @min = "0", @max = "10", @style = "width:50px" })</td>
             </tr>
         </table>
 
