--- a/Sprint123/WebUI/Views/Ticket/AddPopcorn.cshtml
+++ b/Sprint123/WebUI/Views/Ticket/AddPopcorn.cshtml
@@ -7,9 +7,17 @@
 <body>
     <div class="text-center">
         <p>
-            <h2>Voeg popcorn toe!</h2><br />
-            <p>Voor €5,- krijg je popcorn + fris! Los kost dit €6,-!</p><br />
-            <p>Kies bij welke tickets je popcorn wilt toevoegen.</p><br />
+        <h2>Voeg popcorn toe!</h2><br />
+        <p>Voor €5,- krijg je popcorn + fris! Los kost dit €6,-!</p>
+        @if (Model.FirstOrDefault().Is3D == true)
+        {
+            <p>Jullie film is een 3D film. Hiervoor is een 3D bril nodig, deze kost €2,-.</p>
+            <p>Kies bij welke tickets je popcorn en een 3D bril wilt toevoegen.</p>
+        }
+        @if (Model.FirstOrDefault().Is3D == false)
+        {
+            <p>Kies bij welke tickets je popcorn wilt toevoegen.</p>
+        }
         </p>
         @using (Html.BeginForm("AddPopcorn", "Ticket", FormMethod.Post))
         {
@@ -19,12 +27,15 @@
                 <th scope="col">Prijs</th>
                 <th scope="col">Type</th>
                 <th scope="col">Met popcorn</th>
+                @if (Model.FirstOrDefault().Is3D == true)
+                {
                 <th scope="col">Met 3D bril</th>
+                }
             </tr>
             @{ int j = 0;}
             @for (int i = 0; i < Model.Count; i++)
             {
-                j++;
+            j++;
             <tr>
                 <td>
                     @j <p style="display:none">@Html.TextBoxFor(x => Model[i].ReservationID)</p>
@@ -38,14 +49,17 @@
                 <td>
                     @Html.CheckBoxFor(x => Model[i].Popcorn) + €5,-
                 </td>
+                @if (Model.FirstOrDefault().Is3D == true)
+                {
                 <td>
                     @Html.CheckBoxFor(x => Model[i].Glasses) + €2,-
                 </td>
+                }
             </tr>
             }
 
         </table> <br />
         <input class="btn btn-danger" type="submit" value="Voeg toe!" />
-        }
+}
     </div>
 </body>
