--- a/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
@@ -5,61 +5,15 @@
 }
 <div class="text-center">
     <br />
-    @*<button class="btn btn-danger" type="button" onclick="location.href = '@Url.Action("Reservation", "Reservation")'">Haal hier uw reservering op</button> <h2>Verwachte films:</h2>*@
-</div>
-<div class="row">
-    <div class="col-sm"></div>
-    <div class="col-sm">
-        <div class="text-center" style="color: brown; max-width:550px;">
-            <div id="verwachtefilms" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#verwachtefilms" data-slide-to="0" class="active"></li>
-                    <li data-target="#verwachtefilms" data-slide-to="1"></li>
-                    <li data-target="#verwachtefilms" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        @if (ViewBag.trailer1 != null && ViewBag.image1 != null) {
-                        <a target="_blank" href="@Html.Raw(ViewBag.trailer1)"><img class="d-block w-10" src="data:image;base64,@System.Convert.ToBase64String(ViewBag.image1)" alt="First slide"></a>
-                         }
-                        <div class="carousel-caption d-none d-md-block">
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        @if (ViewBag.trailer2 != null && ViewBag.image2 != null) {
-                        <a target="_blank" href="@Html.Raw(ViewBag.trailer2)"><img class="d-block w-10" src="data:image;base64,@System.Convert.ToBase64String(ViewBag.image2)" alt="Second slide"></a>
-                         }
-                        <div class="carousel-caption d-none d-md-block">                             
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        @if (ViewBag.trailer3 != null && ViewBag.image3 != null) {
-                        <a target="_blank" href="@Html.Raw(ViewBag.trailer3)"><img class="d-block w-10" src="data:image;base64,@System.Convert.ToBase64String(ViewBag.image3)" alt="Third slide"></a>
-                         }
-                        <div class="carousel-caption d-none d-md-block">
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#verwachtefilms" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#verwachtefilms" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm"></div>
-</div>
     
-    <h2>Deze Week in de bioscoop:</h2>
-    <button class="btn btn-danger" type='button' onclick="location.href = '@Url.Action("Overview", "UpcomingShow", new {locationid = ViewBag.locid}, null)'">Toon alle films</button>
+</div>
+@Html.Action("Expected")
+   
+    <h2>Deze Week in de bioscoop:</h2>    
     @*<div class="tooltip">genre<span class="tooltiptext">actie, misdaad, historisch...</span></div>*@
     <div class="container">
-        @using (Html.BeginForm())
-         {
+        @using (Html.BeginForm("Dofilter", "UpcomingShow", FormMethod.Post))
+        {
         <div class="row">
             <p>Zoek op film, genre, acteur of regisseur:<br>@Html.TextBox("SearchString") </p>
         </div>
@@ -75,10 +29,11 @@
                 @Html.RadioButton("Age", 16) <span>16+</span><br>
                 <input type="submit" class="btn btn-danger" value="Zoek films" />
                 <input type="reset" class="btn btn-danger" value="Leeg zoekvelden" />
+                <button class="btn btn-danger" type='button' onclick="location.href = '@Url.Action("Overview", "UpcomingShow", new {locationid = ViewBag.locid}, null)'">Toon alle films</button>
             </p>
-        </div>
+           </div>
          }
-    </div>
+        </div>
     <table class="table">
         <tr>
             <th>
