--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/Content/footer-fixed.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/menu.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <link rel="shortcut icon" href="~/Content/favicon.64.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     @*<script src="~/Content/my-javascript.js"></script>*@
     @*<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
