small fixes, creditcard page, footer and ideal page improvements, carousel with real expected movies.

--- a/Sprint123/WebUI/Views/Email/EmailRemoved.cshtml
+++ b/Sprint123/WebUI/Views/Email/EmailRemoved.cshtml
@@ -5,6 +5,6 @@
 
 <body>
     <br />
-    <p>Je email adres is succesvol verwijderd.</p>
+    <p>Je e&#45;mailadres is succesvol verwijderd.</p>
 </body>
 
