--- a/Sprint123/WebUI/Views/Email/NoEmailFound.cshtml
+++ b/Sprint123/WebUI/Views/Email/NoEmailFound.cshtml
@@ -5,6 +5,6 @@
 
 <body>
     <br/>
-    <p>We hebben dit email adres niet kunnen vinden. Heb je wel het juiste email adress ingevoerd?</p>
+    <p>We hebben dit e&#45;mailadres niet kunnen vinden. Heb je wel het juiste email adress ingevoerd?</p>
 </body>
 
