--- a/Sprint123/WebUI/Views/Email/Unsubscribe.cshtml
+++ b/Sprint123/WebUI/Views/Email/Unsubscribe.cshtml
@@ -7,7 +7,7 @@
 <body>
     <br />
     <p>Wat jammer dat je je wilt afmelden voor onze nieuwsbrief!</p>
-    <p>Voer hieronder je email adres in en klik op afmelden.</p>
+    <p>Voer hieronder je e&#45;mailadres in en klik op afmelden.</p>
     @using (Html.BeginForm("Unsubscribe", "Email", FormMethod.Post))
     {
         @Html.ValidationSummary()
