--- a/Sprint123/WebUI/Views/UpcomingShow/Caroussel.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Caroussel.cshtml
@@ -8,7 +8,7 @@
                     <li data-target="#verwachtefilms" data-slide-to="1"></li>
                     <li data-target="#verwachtefilms" data-slide-to="2"></li>
                 </ol>
-                <div class="carousel-inner">
+                <div class="carousel-inner" style="max-height:800px;">
                     <div class="carousel-item active">
                         @if (ViewBag.trailer1 != null && ViewBag.image1 != null)
                         {
