--- a/Sprint123/WebUI/Content/Site.css
+++ b/Sprint123/WebUI/Content/Site.css
@@ -1,4 +1,9 @@
-﻿body {
+﻿/* Possible solution for sticky footer */
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
     padding-top: 50px;
     padding-bottom: 20px;
     margin-bottom: 100px;
@@ -18,10 +23,12 @@ textarea {
     max-width: 280px;
 }
 .card-footer {
-    position: fixed;
-    bottom: 0px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 80px;
     width: 100%;
-    height:100px;
+    overflow: hidden;
 }
 /* Tooltip container */
 .tooltip {
