--- a/Sprint123/WebUI/Views/Reservation/EmailReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/EmailReservation.cshtml
@@ -9,7 +9,7 @@
     {
         <br />
         <p><b>Jullie reserveringsnummer is @Html.DisplayFor(x => Model.ReservationID)</b></p><br />
-        <p>Voer je email adres in om de reservering te bevestigen!</p>
+        <p>Voer je e&#45;mailadres in om de reservering te bevestigen!</p>
         @Html.ValidationSummary()
         <p>@Html.TextBoxFor(x => Model.EmailAdress, new { @class = "formcontrol" })</p>
         <p>Ik wil graag de nieuwsbrief ontvangen!   @Html.CheckBoxFor(x => Model.NewsLetter)</p>
