--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -105,14 +105,13 @@
         </footer>*@
     </div>
     <!-- Begin Footer Avans -->
-    <footer class="card-footer" style="height:110px">
-        <div class="container">
-            <p style="color:aliceblue">&copy; @DateTime.Now.Year - IVH15</p><a href="/"><img src="~/Content/footer-logo90x30.png" alt="Avans Hogeschool" class="footerlogo" /></a>
-            <button class="btn btn-outline-danger" type="button" style="margin-left:50px" onclick="location.href = '@Url.Action("Unsubscribe", "Email")'">Afmelden nieuwsbrief</button>
-            <a target="_blank" href="https://www.facebook.com/Avansinformatica/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_facebook.png" /></a>
-            <a target="_blank"href="https://twitter.com/avanshogeschool" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_twitter.png" /></a>
-            <a target="_blank" href="https://www.instagram.com/avanshogeschool/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_insta.png" /></a>
-        </div>
+    <footer class="card-footer">
+        <div class="col"></div>
+        <button class="btn btn-outline-danger" type="button" style="margin-left:50px" onclick="location.href = '@Url.Action("Unsubscribe", "Email")'">Afmelden nieuwsbrief</button> 
+        <a target="_blank" href="https://www.facebook.com/Avansinformatica/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_facebook.png" /></a>
+        <a target="_blank" href="https://twitter.com/avanshogeschool" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_twitter.png" /></a>
+        <a target="_blank" href="https://www.instagram.com/avanshogeschool/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_insta.png" /></a>
+        <p style="color: aliceblue; margin-left:50px; max-width:200px;">&copy; @DateTime.Now.Year - IVH7</p>
     </footer>
     <!-- End Footer Avans-->
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
