--- a/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
+++ b/Sprint123/WebUI/Views/UpcomingShow/Overview.cshtml
@@ -20,7 +20,7 @@
     {
         <div class="row">
             <div class="col-sm-4">
-                <p>Zoek op film, genre, acteur of regisseur:<br>@Html.TextBox("SearchString") </p>
+                <p>Zoek op film, <a href="#" data-toggle="tooltip" title="actie, fantasie, historisch, kids, misdaad of science fiction">genre</a>, acteur of regisseur:<br>@Html.TextBox("SearchString") </p>
                 @*<select id="Genre" name="Genre">
                     <option value="">Selecteer een Genre...</option>
                     <option value="actie">actie</option>
@@ -151,3 +151,8 @@
     }
 
 </table>
+<script>
+    $(document).ready(function)(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
