--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -105,7 +105,7 @@
         </footer>*@
     </div>
     <!-- Begin Footer Avans -->
-    <footer class="card-footer">
+    <footer class="card-footer" style="padding-left:160px; padding-right:210px">
         <div class="col"></div>
         <button class="btn btn-outline-danger" type="button" style="margin-left:50px" onclick="location.href = '@Url.Action("Unsubscribe", "Email")'">Afmelden nieuwsbrief</button> 
         <a target="_blank" href="https://www.facebook.com/Avansinformatica/" style="float: right; padding-left:8px;"><img src="~/Content/socialmedia_facebook.png" /></a>
